--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "gatsby-image": "^2.0.29",
     "gatsby-plugin-manifest": "^2.0.16",
     "gatsby-plugin-offline": "^2.0.22",
+    "gatsby-plugin-page-transitions": "^1.0.7",
     "gatsby-plugin-react-helmet": "^3.0.5",
     "gatsby-plugin-robots-txt": "^1.4.0",
     "gatsby-plugin-sharp": "^2.0.19",
@@ -18,6 +19,10 @@
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-helmet": "^5.2.0",
+    "react-pose": "^4.0.8",
+    "react-reveal": "^1.2.2",
+    "react-transition-group": "^2.6.1",
+    "react-typing-animation": "^1.6.2",
     "styled-components": "^4.1.3",
     "typed.js": "^2.0.10"
   },
