--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "version": "0.1.0",
   "author": "Aayush Shrestha",
   "dependencies": {
+    "babel-plugin-styled-components": "^1.10.6",
     "gatsby": "^2.0.107",
     "gatsby-image": "^2.0.29",
     "gatsby-plugin-manifest": "^2.0.16",
@@ -13,17 +14,19 @@
     "gatsby-plugin-react-helmet": "^3.0.5",
     "gatsby-plugin-robots-txt": "^1.4.0",
     "gatsby-plugin-sharp": "^2.0.19",
+    "gatsby-plugin-styled-components": "^3.1.14",
     "gatsby-source-filesystem": "^2.0.19",
     "gatsby-transformer-sharp": "^2.1.13",
     "prop-types": "^15.6.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-google-login": "^5.0.7",
     "react-helmet": "^5.2.0",
     "react-pose": "^4.0.8",
     "react-reveal": "^1.2.2",
     "react-transition-group": "^2.6.1",
     "react-typing-animation": "^1.6.2",
-    "styled-components": "^4.1.3",
+    "styled-components": "^4.4.1",
     "typed.js": "^2.0.10"
   },
   "keywords": [
